docs/0.7/_sources/api/gammapy.catalog.SourceCatalogObject3FHL.rst.txt
SourceCatalogObject3FHL
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObject3FHL
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObject3FHL.energy_range
      ~SourceCatalogObject3FHL.flux_points
      ~SourceCatalogObject3FHL.index
      ~SourceCatalogObject3FHL.is_pointlike
      ~SourceCatalogObject3FHL.name
      ~SourceCatalogObject3FHL.position
      ~SourceCatalogObject3FHL.spectral_model

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObject3FHL.info
      ~SourceCatalogObject3FHL.pprint
      ~SourceCatalogObject3FHL.spatial_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: index
   .. autoattribute:: is_pointlike
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: spectral_model

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: pprint
   .. automethod:: spatial_model
