docs/0.15/_sources/api/gammapy.catalog.SourceCatalogObject3FHL.rst.txt
SourceCatalogObject3FHL
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObject3FHL
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObject3FHL.asso
      ~SourceCatalogObject3FHL.energy_range
      ~SourceCatalogObject3FHL.flux_points
      ~SourceCatalogObject3FHL.name
      ~SourceCatalogObject3FHL.position
      ~SourceCatalogObject3FHL.row_index

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObject3FHL.info
      ~SourceCatalogObject3FHL.sky_model
      ~SourceCatalogObject3FHL.spatial_model
      ~SourceCatalogObject3FHL.spectral_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: asso
   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: row_index

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: sky_model
   .. automethod:: spatial_model
   .. automethod:: spectral_model
